--- a/src/template.html
+++ b/src/template.html
@@ -25,9 +25,5 @@
 	     the current page has one -->
 	%sapper.head%
 </head>
-<body>
-	<!-- The application will be rendered inside this element,
-	     because `src/client.js` references it -->
-	<div id="sapper">%sapper.html%</div>
-</body>
+<body>%sapper.html%</body>
 </html>
